--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ToDO App</string>
+    <string name="task_added_successfully">Task added successfully</string>
+    <string name="ok">ok</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="task_edited_successfully">task edited successfuly</string>
 </resources>
